frontend: fix markdown rendered pages
* Fixes horizontal scrolling for code blocks.

* Removes code background color coming with new versions of
  markdown renderer.

* Fixes headings in doc pages wrongly displayed as links.

--- a/cernopendata/modules/theme/assets/semantic-ui/scss/styles.scss
+++ b/cernopendata/modules/theme/assets/semantic-ui/scss/styles.scss
@@ -66,6 +66,21 @@ body {
             font-weight: $font-heavy;
         }
 
+        pre {
+            overflow: auto;
+            code {
+                color: inherit;
+            }
+        }
+
+        code {
+            background-color: transparent;
+        }
+
+        a[name] {
+            color: inherit;
+        }
+
         .cite-paragraph {
             font-weight: $font-light;
             line-height: 1.2;
